--- a/src/sass/theme/parts/base/_custom_properties.scss
+++ b/src/sass/theme/parts/base/_custom_properties.scss
@@ -79,8 +79,10 @@ these properties do not need to be edited */
   --toggler-icon-font-size: 1.3rem;
   --toggler-icon-color: var(--gray-900);
   --toggler-icon-mt: 6px;
+  // Page headers
+  --hero-bg-color: #fff;
+  --hero-img-brightness: 70%;
   // Home header
-  --home-header-bg-color: #fff;
   --home-header-color: var(--white);
   --home-header-bg-height-sm: 300px;
   --home-header-bg-height-lg: 700px;
