--- a/src/sass/theme/parts/engine-components/_form_selector.scss
+++ b/src/sass/theme/parts/engine-components/_form_selector.scss
@@ -136,6 +136,7 @@
     border-left: none;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
+    max-width: 172px;
   }
   label {
     font-size: 0.8rem;
